--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -15,7 +15,7 @@ body {
 }
 
 .activities-section {
-  background-color: blue;
+  /* background-color: blue; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,9 +26,19 @@ body {
   width: 100%;
 
   height: auto;
+  position:relative;
+  z-index: 5;
 
 }
-
+.activite-graph30{
+  position:absolute;
+  z-index: 2;
+  /* background-color: #38B000; */
+  width:60%;
+  top:-22%;
+ 
+  left:-13rem;
+}
 .activite-title {
   display: flex;
   justify-content: right;
@@ -42,13 +52,13 @@ body {
   z-index: 10;
   /* background-color: darkcyan; */
   padding-right: 6rem;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
 }
 
 .activite-name {
 
 
-  background-color: brown;
+  /* background-color: brown; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,7 +97,7 @@ body {
 
 .activite-p {
   width: 100%;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   display: flex;
   justify-content: right;
   align-items: right;
@@ -98,7 +108,8 @@ body {
   display: flex;
   justify-content: right;
   align-items: center;
-  padding-right: 5rem
+  padding-right: 5rem;
+  z-index: 10;
 }
 
 .activite-p p {
@@ -110,6 +121,7 @@ body {
   font-size: clamp(1rem, 3vw, 1.5rem);
   line-height: 1.6;
   width: 60%;
+  z-index: 10;
 }
 
 .activite-groupe {
@@ -131,7 +143,7 @@ body {
 .activite {
   display: flex;
   flex-direction: row-reverse;
-  background-color: white;
+  background-color: pink;
   width: 80%;
   justify-content: space-between;
   align-items: center;
@@ -140,6 +152,7 @@ body {
   align-items: stretch;
   height: 80vh;
   align-items: stretch;
+  z-index: 1000;
 
 
 
@@ -282,7 +295,7 @@ body {
   padding: 1.5rem;
 
 
-  background-color: darkmagenta;
+  /* background-color: darkmagenta; */
 }
 
 .activite-pecture {
@@ -376,15 +389,19 @@ body {
 @media (max-width: 1024px) and (min-width: 769px) {
 
   /* tes styles */
+  
   .activite {
 
-    background-color: red;
+background-color: white;
     width: 100%;
+    flex-wrap: wrap;
+    box-shadow: 0px 0px 168px 0px #12121214;
+
 
   }
 
   .image-div {
-    background: #575757;
+    /* background: #575757; */
     width: 50%;
     padding: 2rem;
   }
@@ -397,63 +414,328 @@ body {
 
   .activite-content {
     width: 50%;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 
     padding-top: 2rem;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:0.5rem
+
   }
 
   .btn-groupe {
-    background-color: blue;
+    /* background-color: blue; */
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: black; */
+    padding: 2rem;
   }
 
+  .right-btn {
+    width: 50%;
+    padding: 1rem
+  }
+
+  .left-btn {
+    width: 50%;
+    padding: 1rem;
+  }
+
+  .activite-p p {
+    width: 80%
+  }
+  .activite-groupe{
+   /* background-color: pink; */
+  }
+  .activities-section{
+   /* background-color: blue; */
+   background: #FCFAF8;
+
+  }
+  .activite-graph30{
+
+    /* background-color: #575757; */
+    width:70%;
+    z-index: 2;
+    position:absolute;
+  }
+  .activite-p{
+    /* background-color: darkcyan; */
+    z-index: 20;
+  }
+  .activite-p p {
+    /* z-index: 30; */
+    position: relative;
+  }
+  .activite-p {
+  position: relative;
+ z-index: 120;
 }
 
-
-
-@media(max-width:768px) and (min-width:481px){
-
-.activite-groupe{
-background-color:antiquewhite;
-width:100%;
-padding: 0;
-padding-top: 2rem;
-padding-bottom: 2rem;
-height:auto;
+.activite-p p {
+  position: relative;
+  z-index: 120;
 
 }
-.image-div{
-  width:100%;
-  min-height:50vh;
-  border-bottom-right-radius: 0;
-  border-top-right-radius:0 ;
-}
-.activite-pecture{
 
-
-  height:60vh;
-}
-.activite{
-  background-color: #38B000;
-  width:100%;
-  height:auto;
-  flex-direction: column;
-}
-.activite-content{
- background: #FFC400;
  
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  width:100%;
-  padding:3rem
-}
-.btn-groupe{
-  width:100%;
-  background-color: aquamarine;
+ 
+
 }
 
-/* .btn-groupe
+
+@media (max-width: 1024px) and (min-width: 769px) and (min-height: 1024px) {
+  .activite-groupe {
+    /* background-color: #FFB700; */
+    width: 100%;
+    height: auto
+  }
+
+  .activite {
+    display: block;
+
+
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    /* background-color: antiquewhite; */
+  }
+
+  .activite-content {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .image-div {
+    width: 100%;
+    min-height: 50vh;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .activite-pecture {
+
+
+    width: 100%;
+    height: 50vh;
+    
+
+  }
+  .activite-graph30{
+    /* background-color: darkcyan; */
+    width:70%;
+    height:70%;
+     }
+
+  .btn-groupe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: none;
+
+  }
+
+  .right-btn {
+    width: 80%;
+    padding-right: 0rem;
+    padding-left: 0;
+    height: 6vh
+  }
+
+  .left-btn {
+    width: 80%;
+    height: 6vh;
+    padding-right: 0rem;
+    padding-left: 0;
+  }
+
+
+
+
+
+
+}
+
+
+@media(max-width:993px) and (min-width:852px){
+
+
+  .activite-section{
+    /* background-color: #38B000; */
+    height:auto;
+    padding:0rem;
+  }
+  .activite{
+    /* background-color: salmon; */
+    height:auto
+  }
+  .activite-groupe{
+    /* padding:0rem; */
+    gap:0rem
+  }
+  .btn-groupe{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    padding:1rem;
+    gap:0.5rem;
+    height:auto;
+  }
+  .activite-content{
+padding:1rem;
+
+gap:1rem;
+  }
+  .right-btn{
+    width:80%;
+  }
+  .left-btn{
+    width:80%
+  }
+  .image-div{
+    background-color: darkcyan;
+    width:50%;
+  
+  }
+  .activite-pecture{
+    width:100%;
+    
+  }
+}
+
+
+
+ @media(max-width:851px){
+
+
+  .activite-section{
+    /* background-color: #575757; */
+    height:auto;
+    gap:0rem;
+  }
+  .activite-groupe{
+    /* background-color: darkblue; */
+    width:100%;
+    
+  }
+  .activite{
+    display:block;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* background-color: pink; */
+    height:auto
+  }
+  .activite-content{
+    width:100%;
+    padding:2rem;
+    gap:1.2rem;
+  }
+  .image-div{
+    width:100%;
+    min-height:50vh
+  }
+  .activite-pecture{
+    height:60vh;
+    width:100%;
+    background-size: cover;
+    /* background-color: darkblue; */
+  }
+  .activite-graph30{
+    /* background:darkcyan; */
+    width:100%;
+  }
+} 
+
+@media(max-width:768px) and (min-width:481px) {
+
+  .activite-section{
+    gap:0rem;
+  }
+  .activite-groupe {
+    /* background-color: antiquewhite; */
+    width: 100%;
+    padding: 0;
+    padding-top: 0rem;
+    padding-bottom:1rem;
+    height: auto;
+
+  }
+  .activite-graph30{
+    /* background-color: #38B000; */
+    width:100%;
+    /* height:60%; */
+    top:-10%;
+    /* background-color: #12121214; */
+  }
+  
+
+  .image-div {
+    width: 100%;
+    min-height: 50vh;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .activite-pecture {
+
+
+    height: 60vh;
+  }
+
+  .activite {
+    /* background-color: #38B000; */
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    
+  }
+
+  .activite-content {
+    /* background: #FFC400; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 3rem;
+    padding-bottom: 4rem;
+  }
+
+  .btn-groupe {
+    width: 100%;
+    /* background-color: aquamarine; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .right-btn {
+    /* background: #575757; */
+    width: 50%
+  }
+
+  .left-btn {
+    width: 50%
+  }
+
+
+  /* .btn-groupe
 
 {
   display:flex;
@@ -461,27 +743,45 @@ height:auto;
   gap:0;
 
 } */
- @media(min-height:1024px){
 
 
-  .image-div{
-min-height:30vh
+  @media(min-height:1024px) {
 
 
+    .image-div {
+      min-height: 30vh;
+
+
+
+    }
+
+    .activite-pecture {
+      height: 50vh
+    }
+
+    .activite-content {
+
+      /* padding-bottom: 7rem; */
+      gap: 2rem;
+      padding-bottom: 4rem;
+    }
   }
-  .activite-pecture{
-    height:50vh
-  }
-  .activite-content{
 
-    /* padding-bottom: 7rem; */
-    gap:2rem;
-    padding-bottom: 4rem;
+  .activite-p {
+    /* background-color: aquamarine; */
+
+
+    padding: 0;
+    padding: 1.5rem;
   }
- }
+
+  .activite-p p {
+    width: 100%;
+  }
 
 
 }
+
 @media(max-width:480px) {
 
   .activite-section {
@@ -491,7 +791,7 @@ min-height:30vh
 
   .activite-groupe {
     padding: 0;
-    background-color: pink;
+    /* background-color: pink; */
     gap: 0;
   }
 
@@ -499,20 +799,24 @@ min-height:30vh
 
 
     flex-direction: column;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     height: auto;
-    border-radius: 
-25.2px;
+    /* border-radius: 
+25.2px; */
+gap:0rem;
+border-radius:0;
 
   }
 
-  .activite--groupe {
+  .activite-groupe {
 
 
 
 
     justify-content: center;
     align-items: center;
+    padding-top:0;
+    background-color: #38B000;
   }
 
   .activite-content {
@@ -520,124 +824,149 @@ min-height:30vh
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-
-
+justify-content: center;
+align-items: center;
+padding-top:0.5rem;
+padding-bottom:1rem;
 
     border-radius: 0;
   }
 
   .image-div {
     width: 100%;
-    
-    min-height:40vh;
-    display:flex;
+
+    min-height: 40vh;
+    display: flex;
     justify-content: center;
     align-items: center;
-    padding:1rem;
-   border-top-left-radius: 25.2px;
-border-top-right-radius: 25.2px;
-border-bottom-left-radius: 0;
-border-bottom-right-radius: 0;
+    padding: 1rem;
+    /* border-top-left-radius: 25.2px;
+    border-top-right-radius: 25.2px; */
+    border-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 
   }
 
   .activite-pecture {
-   min-height:80%;
-   width:100%;
-   
-  
+    height: 45vh;
+    width: 100%;
+
+
     /* background-color: #38B000; */
     background-size: cover;
-    
+
   }
 
- 
+
 
   .btn-groupe {
     width: 100%;
-    background-color: #575757;
+    /* background-color: #575757; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    gap: 1rem;
   }
 
   .right-btn {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:1rem;
-   
+    padding: 1rem;
+
+    width: 100%
+  }
+
+  .left-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    width: 100%;
+
+  }
+
+  .activite-title {
+    /* background-color: darkcyan; */
+    padding-right: 1rem;
+  }
+
+  .activite-title img {
+    width: 8%;
+  }
+
+  .activite-p {
+
+    /* background-color: #38B000; */
+    padding-right: 1rem;
+  }
+
+  .activite-p p {
+
     width: 100%;
   }
-  .left-btn{
-    padding:1;
+
+  .btn-activite {
+    /* background-color: red; */
+
+
   }
-  .activite-title{
-    background-color: darkcyan;
-     padding-right:1rem;
+
+
+  .out {
+
+    /* Hauteur égale pour avoir un cercle */
+    /* Couleur du cercle */
+    border-radius: 50%;
+
   }
-  .activite-title img{
-    width:8%;
+
+  .next,
+  .prev {
+    border: 0.55px solid #000000;
+    background: #FFFFFF;
+
+
+
+    /* border-width: 0.55px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 10px;
+    height: 5px
   }
-  .activite-p{
-  
-    background-color: #38B000;
-     padding-right:1rem;
-  }
-  .activite-p p{
-   
-      width:100%;
-  }
-  .btn-activite{
-    background-color:red;
-  
-
-}
-
-
-.out{
-
-   /* Hauteur égale pour avoir un cercle */
-  /* Couleur du cercle */
-  border-radius: 50%;
- 
-}
-.next,.prev{
-   border: 0.55px solid #000000;
-  background: #FFFFFF;
-
-
-
-  /* border-width: 0.55px; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width:10px;
-  height:5px
-}
-@media(min-height:700px){
-  .activite-groupe{
-    background-color:red;
-    padding:0;
-  }
-  .image-div{
-    background-color: fuchsia;
-    min-height:50vh
+  .activite-graph30{
+    /* background-color: #575757; */
+    top:-10%;
+    width:100%;
+    
    
   }
-  .activite-pecture{
 
-    height:50vh;
-    background-color: darkblue;
-  }
-  .activite-content{
+  @media(min-height:700px) {
+    .activite-groupe {
+      background-color: red;
+      padding: 0;
+    }
 
-  
-  }
-  /* .btn-groupe{
+    .image-div {
+      background-color: fuchsia;
+      min-height: 35vh
+    }
+
+    .activite-pecture {
+
+      height: 35vh;
+      background-color: darkblue;
+    }
+
+    .activite-content {}
+
+    /* .btn-groupe{
 
     display:flex;
     justify-content: center;
@@ -647,14 +976,15 @@ border-bottom-right-radius: 0;
 
 
   } */
-}
-.btn-groupe{
+  }
 
-  /* display:flex;
+  .btn-groupe {
+
+    /* display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; */
-}
+  }
 
 
 
