--- a/FrontEnd/src/assets/styles/organisme.css
+++ b/FrontEnd/src/assets/styles/organisme.css
@@ -1,10 +1,9 @@
-/* @media (min-width: 768px) {
-    .image1 {
-        left: 50%;
-        transform: translateX(-50%);
+/* @media (max-width: 768px) {
+    .organisme {
+       background-color: blueviolet;
     }
-}
-@media (max-width: 480px) {
+} */
+/* @media (max-width: 480px) {
     .image1 {
         width: 10%;
         height: 10%;
