--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -143,7 +143,9 @@ body {
 .activite {
   display: flex;
   flex-direction: row-reverse;
-  background-color: pink;
+  background-color: white;
+  box-shadow: 0px 0px 168px 0px #12121214;
+
   width: 80%;
   justify-content: space-between;
   align-items: center;
@@ -589,7 +591,7 @@ background-color: white;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
+    /* background-color: aqua; */
     padding:1rem;
     gap:0.5rem;
     height:auto;
@@ -606,7 +608,7 @@ gap:1rem;
     width:80%
   }
   .image-div{
-    background-color: darkcyan;
+    /* background-color: darkcyan; */
     width:50%;
   
   }
@@ -816,7 +818,7 @@ border-radius:0;
     justify-content: center;
     align-items: center;
     padding-top:0;
-    background-color: #38B000;
+    /* background-color: #38B000; */
   }
 
   .activite-content {
