--- a/FrontEnd/src/assets/styles/story.css
+++ b/FrontEnd/src/assets/styles/story.css
@@ -21,6 +21,8 @@ body, h3, p {
     align-items: center;
    padding:2rem;
    gap:4rem;
+   background: #FCFAF8;
+
     /* background-color: #FFC400; */
 }
 
@@ -78,7 +80,7 @@ border-radius: 158.74px;
     display:flex;
     flex-direction: column;
     width:40%;
-    background-color: #38B000;
+    /* background-color: #38B000; */
 
 }
 
@@ -94,7 +96,7 @@ border-radius: 158.74px;
     width:100%;
     height: auto;
     gap:4rem;
-    background-color: darkcyan;
+    /* background-color: darkcyan; */
 }
 .story-image {
     position: relative;
@@ -103,7 +105,7 @@ min-height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white; 
+    /* background-color: white;  */
     
 }.graph8{
     max-width:70%;
@@ -146,7 +148,7 @@ min-height: 50vh;
 }
 .content{
     gap:1rem;
-   background-color: pink;
+   /* background-color: pink; */
    display:flex;
    flex-direction:column;
    justify-content: center;
@@ -256,7 +258,7 @@ align-items: center;
 @media (max-width: 1024px) and (min-height: 800px) and (orientation: portrait){
 
     .story-section{
-        background-color: rgb(215, 255, 192);
+        /* background-color: rgb(215, 255, 192); */
         
     }
     .story-content{
@@ -265,7 +267,7 @@ align-items: center;
         justify-content: space-around;
     }
     .content{
-  background:pink;
+  /* background:pink; */
   display:flex;
   align-items: center;
 width:50%;
@@ -273,7 +275,7 @@ padding:1rem;
     }
     .story-image{
         width:40%;
-        background-color: black;
+        /* background-color: black; */
     }
     .boys{
         top:30%;
@@ -310,7 +312,7 @@ padding:1rem;
 
 
     .story-section{
-        background:purple
+        /* background:purple */
     }
     .story-content{
         display:flex;
@@ -318,10 +320,17 @@ padding:1rem;
     }
     .content{
         width:50%;
-        padding:1rem;
+      
     }
 }
 @media (max-width: 768px) {
+    .stats-button{
+       
+  width:100%;
+  gap:0.5rem
+  ;
+ 
+    }
   .graph9{
    /* display:none; */
    max-width:30%;
@@ -334,6 +343,7 @@ padding:1rem;
     /* display:none; */
     max-width:90%;
 }
+
 @media(max-height:700px){
 .boys{
     /* display:none; */
@@ -364,6 +374,10 @@ padding:1rem;
     justify-content: space-around;
 }
 
+.stats-button{
+    padding-right:22rem;
+   
+}
 }
 /*  */
 @media( max-width:540px){
