--- a/FrontEnd/src/assets/styles/footer.css
+++ b/FrontEnd/src/assets/styles/footer.css
@@ -14,3 +14,29 @@
             background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.6) 58.555%, rgba(255, 255, 255, 0) 100%);
         }
       /* styles.css */
+@media (max-width:468px) {
+  .footer-container{
+    display: flex;
+    flex-direction: column;
+  }
+  /* .footer-section{
+    overflow: hidden;
+  } */
+  .background2{
+    height: 100%;
+  }
+.background{
+    height: 100%;
+    
+  }
+  .form{
+    margin-top: -30vh;
+
+  }
+  .phrase{
+    /* margin-top: -2vh; */
+    display: flex;
+    align-items: end;
+
+  }
+}
