--- a/FrontEnd/src/assets/styles/who.css
+++ b/FrontEnd/src/assets/styles/who.css
@@ -1,6 +1,35 @@
-.who-section{
+.who-prDiv{
     padding: 6rem;
 }
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.slider-container {
+  overflow: hidden;
+  width: 100%;
+  height: 20vh;
+  position: relative;
+  margin-top: -8vh;
+}
+
+.slider-track {
+  display: flex;
+  width: 200%; /* car on va mettre 2 images */
+  animation: slide 10s linear infinite;
+}
+.slider-track img {
+  width: 100%;
+  height: auto;
+  flex-shrink: 0;
+}
+
+
 @media (max-width:480px){
     .who-section{
         padding: 0.5rem;
@@ -8,6 +37,40 @@
     }
     .who-prDiv{
         display: flex;
+            padding: 0.25rem;
+
         flex-direction: column-reverse;
+        /* background-color: aqua; */
+    }
+    .partenaire{
+        /* background-color: aqua; */
+        height: 10vh;
+    }
+    .ligne1{
+        /* background-color: red; */
+        width: 100%;
+    }
+      .ligne2{
+        /* background-color: green; */
+        width: 20%;
+    }
+    .ligne3{
+        /* background-color: yellow; */
+        width: 100%;
+        /* display: none; */
+    }
+    .slider-track{
+        /* background-color: aqua; */
+        margin-top: 2rem;
+    }
+    .slider-container{
+        height: 10vh;
+    }
+    .isam{
+        font-size: medium;
+    }
+    .titleDiv{
+        display: flex;
+        flex-direction: row;
     }
 }
